--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
+    "test:coverage": "jest --coverage",
     "format": "prettier --write src/**/*.ts{,x}",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --quiet",
     "lint-fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
@@ -87,6 +88,7 @@
     "eslint-plugin-react": "^7.22.0",
     "husky": "^5.1.3",
     "jest": "^26.6.0",
+    "jest-html-reporter": "^3.3.0",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
     "pretty-quick": "^3.1.0",
