--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
     "konva": "^7.2.5",
-    "kruskal-mst": "file:../npm-projects/kruskal-mst",
+    "kruskal-mst": "^1.0.0",
     "mini-css-extract-plugin": "0.11.3",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
