--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "webpack serve --config webpack.dev.config.ts",
     "build": "webpack --config webpack.prod.config.ts",
-    "test": "jest"
+    "test": "jest",
+    "lint": "tsc --noEmit && eslint . --ext js,ts,json --quiet --fix"
   },
   "dependencies": {
     "react": "^17.0.1",
@@ -33,6 +34,8 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.1.3",
     "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-webpack-plugin": "^2.5.2",
@@ -41,6 +44,8 @@
     "jest": "^26.6.3",
     "konva": "^7.2.5",
     "kruskal-mst": "^1.0.0",
+    "prettier": "^2.2.1",
+    "prettier-eslint": "^12.0.0",
     "react-konva": "^17.0.1-3",
     "style-loader": "^2.0.0",
     "ts-node": "^9.1.1",
