--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "tsc --noEmit && eslint . --ext js,ts,json --quiet --fix"
   },
   "dependencies": {
+    "floyd-warshall-shortest": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
