--- a/.babelrc
+++ b/.babelrc
@@ -1,24 +1,18 @@
 {
   "presets": [
     [
-      "@babel/preset-env", 
+      "@babel/preset-env",
       {
-        "targets": 
-          {
-            "node": "current"
-          }
+        "targets": {
+          "node": "current"
         }
+      }
     ],
     "@babel/preset-react",
     "@babel/preset-typescript"
   ],
   "plugins": [
-    "@babel/plugin-proposal-class-properties",
-    [
-      "@babel/plugin-transform-runtime",
-      {
-        "regenerator": true
-      }
-    ]
+    ["@babel/plugin-proposal-class-properties", { "loose": false }],
+    ["@babel/plugin-transform-runtime", { "regenerator": true }]
   ]
 }
