--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "tsc --noEmit && eslint . --ext js,ts,json --quiet --fix"
   },
   "dependencies": {
+    "mobx": "^6.1.8",
+    "mobx-react": "^7.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
