--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mobx": "^6.1.8",
     "mobx-react": "^7.1.0",
     "react": "^17.0.1",
+    "react-colorful": "^5.1.0",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
